# blokus_rl

./: .gitignore  AGENTS.md  README.md  REINFORCEMENT_LEARNING_APPROACH.md  main.py  pyproject.toml
backend/: main.py  minimal_test.py  simple_test.py  testable_app.py  working_backend.py
backend/html/: index.html
backend/static/: app.js  simple-blokus.js
backend_tests/: direct_test.py  minimal_test.py  simple_test.py  testable_app.py
blokus_env/: __init__.py  blokus_env.py  blokus_env_optimized.py  mcts.py  neural_network.py  neural_network_mock.py  q_learning.py  q_learning_optimized.py  register_env.py  self_play.py  test_env.py
frontend/: server.py
frontend/public/: index.html  main.js
integration_tests/: run_full_stack.py  test_backend.py  test_complete_integration.py  test_integration.py
tests/: __init__.py  debug_mcts.py  debug_self_play.py  test_basic_functionality.py  test_blokus_env.py  test_both_methods.py  test_comprehensive.py  test_mcts.py  test_mcts_basic.py  test_mcts_simple.py  test_methods_summary.py  test_piece_shapes.py  test_q_learning.py  test_q_learning_optimized.py  test_q_learning_performance.py  test_self_play.py  test_self_play_basic.py  test_self_play_simple.py
tools/performance/: performance_analysis.py  performance_baseline.py  test_optimization.py
